# project1_Gorshkov_Sergey_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py
myenv/: pyvenv.cfg
project1_Gorshkov_Sergey_M25-555/: pyvenv.cfg
