[tool.poetry]
 packages = [
     { include = "labyrinth_game" },
 ]
 name = "project1_Gorshkov_Sergey_M25-555"
version = "0.1.0"
description = ""
authors = ["Sergey Gorshkov <Dantistsjohn@mail.ru>"]
readme = "README.md"

 
[tool.poetry.dependencies]
python = "^3.12"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"