[tool.poetry]
 packages = [
     { include = "labyrinth_game" },
 ]
 name = "project1_Gorshkov_Sergey_M25-555"
version = "0.1.0"
description = ""
authors = ["Sergey Gorshkov <Dantistsjohn@mail.ru>"]
readme = "README.md"

 
[tool.poetry.dependencies]
python = "^3.12"



[tool.poetry.group.dev.dependencies]
ruff = "^0.14.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 